--- a/vezba16.css
+++ b/vezba16.css
@@ -1,7 +1,11 @@
 .div1 {
+  position: relative;
+  top: 200px;
+  right: 100px;
   margin: auto;
   width: 300px;
   height: 700px;
+  float: right;
 }
 label {
   display: block;
@@ -25,4 +29,9 @@ textarea {
 .dno {
   font-size: 10px;
   color: grey;
+}
+iframe {
+  position: absolute;
+  top: 200px;
+  left: 100px;
 }
