--- a/prvisajt.css
+++ b/prvisajt.css
@@ -4,7 +4,7 @@
   padding: 0px;
 }
 header {
-  border-bottom: 1px solid black;
+  /*border-bottom: 1px solid black;*/
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -32,4 +32,128 @@ header li {
   background-color: rgb(47, 47, 212);
   color: white;
   transition-duration: 0.5s;
+}
+.prvasekcija {
+  width: 100%;
+  height: 78vh;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+}
+.naslov {
+  width: 40%;
+  height: 70vh;
+  /* border: black 1px solid;*/
+}
+.prvasekcija img {
+  width: 40%;
+  height: 70vh;
+}
+.naslov h1 {
+  font-size: 50px;
+  color: rgb(71, 71, 71);
+  margin: 20px;
+}
+.naslov h3 {
+  font-size: 25px;
+  color: gray;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
+.getstarted {
+  width: 150px;
+  height: 40px;
+  border: none;
+  background-color: #16df7e;
+  color: white;
+  font-size: 17px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 18px #16df7e;
+}
+.watchvideo {
+  border: none;
+  background-color: white;
+  color: gray;
+  font-size: larger;
+  margin-left: 50px;
+}
+.drugasekcija {
+  border: 1px solid black;
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.kartica {
+  background-color: rgb(238, 235, 235);
+  width: 300px;
+  height: 250px;
+  padding: 20px;
+}
+.kartica p,
+h3 {
+  margin-top: 20px;
+}
+.kartica p {
+  font-size: 17px;
+}
+.kartica h3:hover {
+  color: #16df7e;
+}
+.trecasekcija {
+  border: 1px solid black;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+
+  justify-content: center;
+}
+.fas {
+  font-size: 30px;
+  color: #16df7e;
+}
+.far {
+  font-size: 30px;
+  color: #16df7e;
+}
+.trecasekcija img {
+  width: 550px;
+  height: 350px;
+  margin-top: 100px;
+}
+.trecasekcijatext {
+  margin-top: 100px;
+  margin-left: 50px;
+}
+.trecasekcijatext h1 {
+  font-size: xx-large;
+}
+.trecasekcijatext p {
+  font-size: 20px;
+  margin-top: 20px;
+}
+.trecasekcijatext li {
+  font-size: 17px;
+  margin-top: 10px;
+}
+.cetvrtasekcija {
+  border: 1px solid black;
+  width: 100%;
+  height: 30vh;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.cetvrtasekcija h1 {
+  color: #16df7e;
+  font-size: 60px;
+}
+.cetvrtasekcija p {
+  font-size: 17px;
+}
+.cetvrtasekcija div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
