--- a/prvisajt.css
+++ b/prvisajt.css
@@ -405,14 +405,14 @@ p {
   margin: 20px;
 }
 .teamdiv {
-  border: 1px solid red;
+  /* border: 1px solid red;*/
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: space-evenly;
 }
 .teamdiv div {
-  border: 1px solid green;
+  /* border: 1px solid green;*/
   width: 350px;
   height: 550px;
   background-color: white;
@@ -449,4 +449,184 @@ p {
 }
 .ikonice .fab:hover {
   color: #16df7e;
+}
+.desetasekcija {
+  /*border: 1px solid black;*/
+  width: 100%;
+  height: 150vh;
+}
+.desetasekcija h1 {
+  text-align: center;
+
+  font-size: 40px;
+  padding-top: 50px;
+  color: rgb(104, 103, 103);
+}
+.desetasekcija p {
+  font-size: 20px;
+  margin: 20px;
+}
+.location {
+  width: 35%;
+  height: 700px;
+  border-top: 3px solid #16df7e;
+  border-bottom: 3px solid #16df7e;
+  background-color: rgb(243, 242, 242);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.forma {
+  width: 50%;
+  height: 700px;
+  border-top: 3px solid #16df7e;
+  border-bottom: 3px solid #16df7e;
+  background-color: rgb(243, 242, 242);
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.contactsekcija {
+  /*border: 1px solid red;*/
+  width: 100%;
+  height: 120vh;
+  display: flex;
+  justify-content: space-evenly;
+}
+.locationredovi {
+  /*border: 1px solid red;*/
+  width: 90%;
+  height: 100px;
+  display: flex;
+}
+.locationredovi h1 {
+  font-size: 25px;
+  padding-top: 10px;
+  text-align: start;
+}
+.locationredovi p {
+  font-size: 17px;
+  margin-top: 5px;
+  margin-left: 0px;
+}
+.ikonicecontact {
+  /*border: 1px solid blue;*/
+  border-radius: 50%;
+  width: 60px;
+  height: 60%;
+  margin: 20px 10px 10px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+}
+.textcontact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+.forma label {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.prvadvalabela {
+  /*border: 1px solid red;*/
+  height: 97px;
+  display: flex;
+  justify-content: start;
+}
+.prvadvalabela div {
+  width: 40%;
+  margin: 20px;
+}
+.prvadvalabela label {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+.prvadvalabela input {
+  height: 40px;
+  width: 280px;
+}
+.subject {
+  padding-left: 23px;
+  margin-top: 20px;
+}
+#subject {
+  height: 40px;
+  width: 572px;
+}
+.forma button {
+  margin: auto;
+  padding: 10px 30px;
+  border: none;
+  border-radius: 5px;
+  background-color: #16df7e;
+  color: white;
+  font-size: 17px;
+}
+.forma button:hover {
+  background-color: rgb(47, 47, 212);
+}
+.jedanaestasekcija {
+  width: 100%;
+  height: 65vh;
+  background-color: rgb(230, 227, 227);
+}
+.jedanaestasekcija h1 {
+  text-align: center;
+  padding-top: 70px;
+  font-size: 40px;
+  color: rgb(49, 49, 49);
+}
+.jedanaestasekcija p {
+  font-size: 20px;
+  margin: 20px;
+  font-style: italic;
+}
+.enteremail {
+  /*border: 1px solid red;*/
+  display: flex;
+  justify-content: center;
+}
+.enteremail input {
+  height: 40px;
+  width: 400px;
+  border-radius: 5px;
+  border: 1px solid gray;
+}
+.enteremail button {
+  width: 130px;
+  background-color: #16df7e;
+  color: white;
+  border: none;
+  font-size: 18px;
+  border-radius: 5px;
+}
+.ikoniceposlednji {
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+}
+.ikoniceposlednji .fab {
+  font-size: 20px;
+  margin: 10px;
+}
+footer {
+  border-top: 2px solid rgb(104, 103, 103);
+  width: 80%;
+  height: 20%;
+  margin-top: 50px;
+  margin: auto;
+  display: flex;
+}
+footer div {
+  /*border: 1px solid black;*/
+  width: 50%;
+  height: 100%;
+  padding-top: 30px;
+}
+.designed {
+  text-align: right;
 }
