--- a/prvi sajt/prvisajt.css
+++ b/prvi sajt/prvisajt.css
@@ -1,8 +1,12 @@
+html {
+  scroll-behavior: smooth;
+}
 * {
   box-sizing: border-box;
   margin: 0px;
   padding: 0px;
 }
+
 header {
   /*border-bottom: 1px solid black;*/
   display: flex;
@@ -10,6 +14,10 @@ header {
   align-items: center;
   justify-content: space-evenly;
   padding: 20px;
+  position: sticky;
+  top: 0px;
+  background-color: white;
+  z-index: 2;
 }
 header ul {
   display: flex;
@@ -48,6 +56,29 @@ header li {
 .prvasekcija img {
   width: 40%;
   height: 70vh;
+  position: relative;
+  animation: mojaanimacija;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-fill-mode: inherit;
+}
+@keyframes mojaanimacija {
+  0% {
+    top: 0px;
+  }
+  25% {
+    top: 25px;
+  }
+  50% {
+    top: 0px;
+  }
+  75% {
+    top: -25px;
+  }
+  100% {
+    top: 0px;
+  }
 }
 .naslov h1 {
   font-size: 50px;
@@ -128,10 +159,12 @@ h3 {
 }
 .trecasekcijatext h1 {
   font-size: xx-large;
+  color: rgb(49, 49, 49);
 }
 .trecasekcijatext p {
   font-size: 20px;
   margin-top: 20px;
+  color: rgb(49, 49, 49);
 }
 .trecasekcijatext li {
   font-size: 17px;
