--- a/prvi sajt/prvisajt.css
+++ b/prvi sajt/prvisajt.css
@@ -25,6 +25,10 @@ header ul {
   list-style-type: none;
   justify-content: space-evenly;
 }
+header ul a {
+  text-decoration: none;
+  color: rgb(43, 42, 42);
+}
 header li {
   margin: 10px;
   font-size: 20px;
