--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -9,9 +9,9 @@
 .div2 {
   width: 400px;
   height: 300px;
-  background-color: grey;
+  background-color: gray;
 }
-
+/* nesto bilo sta */
 .dugme {
   border: none;
   font-size: larger;
