--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -11,7 +11,8 @@
   height: 300px;
   background-color: gray;
 }
-/* nesto bilo sta */
+/* nesto bilo  */
+/* sabdadsadalsd */
 .dugme {
   border: none;
   font-size: larger;
