--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -13,6 +13,7 @@
 }
 /* nesto bilo  */
 /* sabdadsadalsd */
+/* tjt uspeo sam da resim problem sa githubom */
 .dugme {
   border: none;
   font-size: larger;
