--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -15,6 +15,7 @@
 /* sabdadsadalsd */
 /* tjt uspeo sam da resim problem sa githubom */
 /* asndnaksjdnkjasd */
+/* aknsdlkankdna */
 .dugme {
   border: none;
   font-size: larger;
