--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -14,8 +14,7 @@
 /* nesto bilo  */
 /* sabdadsadalsd */
 /* tjt uspeo sam da resim problem sa githubom */
-/* asndnaksjdnkjasd */
-/* aknsdlkankdna */
+/* asjda */
 .dugme {
   border: none;
   font-size: larger;
