--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -15,6 +15,8 @@
 /* sabdadsadalsd */
 /* tjt uspeo sam da resim problem sa githubom */
 /* asjda */
+/* ijaidlas */
+
 .dugme {
   border: none;
   font-size: larger;
