--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -12,10 +12,7 @@
   background-color: gray;
 }
 /* nesto bilo  */
-/* sabdadsadalsd */
-/* tjt uspeo sam da resim problem sa githubom */
-/* asjda */
-/* ijaidlas */
+/* gfyytyhcmchy */
 
 .dugme {
   border: none;
