--- a/html-css deo/vezba3.css
+++ b/html-css deo/vezba3.css
@@ -12,8 +12,7 @@
   background-color: gray;
 }
 /* nesto bilo  */
-/* gfyytyhcmchy */
-/* ojasdjoiaosdij */
+/* nsdadnl */
 
 .dugme {
   border: none;
